--- a/conf/cassandra.yaml
+++ b/conf/cassandra.yaml
@@ -954,13 +954,12 @@ windows_timer_interval: 1
 # Back-pressure settings #
 # If enabled, the coordinator will apply the back-pressure algorithm to each mutation sent to replicas:
 back_pressure_enabled: false
-# The ratio between incoming mutation responses and outgoing mutation requests.
-# If below back_pressure_low_ratio, an OverloadedException is sent to the replica; if between the back_pressure_low_ratio
-# and back_pressure_high_ratio, outgoing mutations are rate limited according to the incoming rate; if above
-# back_pressure_high_ratio, the rate is increased; back_pressure_change_factor represents the percentage by which the
-# rate limiting is increased or decreased.
-back_pressure_high_ratio: 0.90
-back_pressure_low_ratio: 0.10
-back_pressure_change_factor: 25
 # Overrides the write timeout when back-pressure is enabled.
 back_pressure_timeout_override: 5000
+# The factory for the back-pressure algorithm to eventually apply, with arguments passed between parenthesis.
+# The default takes three arguments: high ratio, low ratio and factor, and uses the ratio between incoming mutation 
+# responses and outgoing mutation requests. If below low ratio, an OverloadedException is sent to the replica; 
+# if between low ratio and high ratio, outgoing mutations are rate limited according to the incoming rate; if above
+# high ratio, the rate is increased; the factor represents the percentage by which the rate limiting is increased or 
+# decreased.
+back_pressure_factory: org.apache.cassandra.net.RateBasedBackPressure$Factory(0.90,0.10,25)
